; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_thread.c_uv__sem_wait.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_thread.c_uv__sem_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @uv__sem_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uv__sem_wait(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  br label %4

4:                                                ; preds = %14, %1
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @sem_wait(i32* %5)
  store i32 %6, i32* %3, align 4
  br label %7

7:                                                ; preds = %4
  %8 = load i32, i32* %3, align 4
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %14

10:                                               ; preds = %7
  %11 = load i64, i64* @errno, align 8
  %12 = load i64, i64* @EINTR, align 8
  %13 = icmp eq i64 %11, %12
  br label %14

14:                                               ; preds = %10, %7
  %15 = phi i1 [ false, %7 ], [ %13, %10 ]
  br i1 %15, label %4, label %16

16:                                               ; preds = %14
  %17 = load i32, i32* %3, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %16
  %20 = call i32 (...) @abort() #3
  unreachable

21:                                               ; preds = %16
  ret void
}

declare dso_local i32 @sem_wait(i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
